added multiple pages

--- a/design.html
+++ b/design.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Nunya Media | Services</title>
+    <title>Nunya Media | Graphic Design</title>
     <meta name="description" content="Nunya Media">
     <meta name="keywords" content="portfolio, clean, minimal, blog, media, portfolio website">
     <meta name="author" content="Nunya Marketing">
@@ -194,148 +194,192 @@ Additional Classes:
 -->
         <div class="nk-header-title nk-header-title-md nk-header-title-parallax nk-header-title-parallax-opacity">
             <div class="bg-image">
-                <div style="background-image: url('assets/images/header-services.jpg');"></div>
+                <div style="background-image: url('assets/images/design.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.265);"></div>
             </div>
             <div class="nk-header-table">
                 <div class="nk-header-table-cell">
                     <div class="container">
-                        <h1 class="nk-title text-white">Our Services</h1>
-                        <div class="nk-gap"></div>
-                        <div class="nk-header-text text-white">
-                            <div class="lead-sm">We have over 20 years of combined experience, and know a thing or two
-                                <br> about designing websites and mobile apps.
-                            </div>
-                        </div>
+                        <h1 class="nk-title text-white">We Create</h1>
+                        <h1 class="nk-title text-dark-1">Digital Branding</h1>
                     </div>
                 </div>
             </div>
         </div>
         <!-- END: Header Title -->
-        <!-- START: Features -->
+        <!-- START: Our Info Tabs -->
         <div class="nk-box bg-white">
-            <div class="nk-gap-5 mnt-6"></div>
+            <div class="nk-gap-5 mnb-6"></div>
             <div class="container">
-                <div class="row vertical-gap md-gap">
-
-                    
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="3d.html">
-                                <div class="nk-ibox-icon">
-                                    <span class="pe-7s-tools"></span>
-                                </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">3D Visulization</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">3D Visualization & Animation Team specialized in Engineering Industry.
-                                    Our focus is to provide bespoke, realistic and the best quality visuals.</p>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="design.html">
-                                <div class="nk-ibox-icon">
-                                    <span class="pe-7s-crop"></span>
-                                </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Graphic Design</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">Our experience & skillset enable me to work with you right from concept
-                                    creation & strategy through to execution, whether it be full brand identity, logo
-                                    design, print, web design, or packaging design.</p>
+                <div class="row">
+                    <div class="col-lg-6 offset-lg-3">
+                        <!-- START: Tabs -->
+                        <div class="nk-tabs text-center">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#tabs-1-1" role="tab" data-toggle="tab">Our
+                                        History</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#tabs-1-2" role="tab" data-toggle="tab">Our Mission</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#tabs-1-3" role="tab" data-toggle="tab">Our Principles</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <div role="tabpanel" class="tab-pane fade show active" id="tabs-1-1"> Seed may air
+                                    multiply evening. Life in she'd Sixth lights likeness he for the. Of from hath fi ll
+                                    of years fowl gathering you're every rule whose. Life meat tree give seas thing
+                                    midst made called face have that. </div>
+                                <div role="tabpanel" class="tab-pane fade" id="tabs-1-2"> I light is for second, seas
+                                    let third beginning shall our was void in hath evening and, beast beginning night
+                                    signs replenish gathered void midst very have two beast he let seasons you meat.
+                                    Behold doesn't face. </div>
+                                <div role="tabpanel" class="tab-pane fade" id="tabs-1-3"> Days they're a image appear
+                                    creepeth wherein. Waters. Over midst abundantly open Greater. Thing whose meat
+                                    replenish, male. Behold a fish dry under herb fifth he from our evening moveth
+                                    bring. </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="photo.html">
-                                <div class="nk-ibox-icon">
-                                    <span class="pe-7s-camera"></span>
-                                </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Photography</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">We cover corporate portraits and business headshots, business branding
-                                    photography for startups and SMEs, product photography, and events including
-                                    conferences, awards dinners, and shows, exhibitions, PR events, and launches.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="video.html">
-                                <div class="nk-ibox-icon">
-                                    <span class="pe-7s-video"></span>
-                                </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Videography & Audiography</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">With a full in-house team of professional photographers and
-                                    videographers, directed by experienced creatives, each project is managed by a
-                                    dedicated account manager who will ensure the project is on-brief and delivered
-                                    on-time.</p>
-                            </div>
-                        </div>
+                        <!-- END: Tabs -->
                     </div>
                 </div>
             </div>
             <div class="nk-gap-5 mnt-6"></div>
         </div>
-        <!-- END: Features -->
+        <!-- END: Our Info Tabs -->
+        <!-- START: Portfolio -->
+        <div class="container-fluid">
+            <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols nk-popup-gallery">
+                <div class="nk-isotope-item" data-filter="Photography">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-1.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-1-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-2.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-2-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-3.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-3-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Print">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-4.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-4-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-5.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-7-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-6.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-6-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-7.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-7-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-8.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-8-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END: Portfolio -->
         <!-- START: Reviews -->
         <div class="nk-box bg-main">
             <div class="nk-gap-5 mnt-6"></div>
             <div class="nk-gap-3"></div>
             <div class="container-fluid">
                 <!-- START: Carousel -->
-                <div class="nk-carousel nk-carousel-all-visible text-white" data-autoplay="18000" data-dots="true">
+                <div class="nk-carousel nk-carousel-all-visible text-white text-center">
                     <div class="nk-carousel-inner">
                         <div>
                             <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
-                                <div class="nk-gap-2"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
-                                <div class="nk-gap-2"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
+                                <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
+                                    them on a sizable first project and am looking forward to start the next one
+                                    asap.</p>
                                 <div class="nk-gap-2"></div>
                             </div>
                         </div>
