--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Nunya Media | Services</title>
+    <title>Nunya Media | Videography</title>
     <meta name="description" content="Nunya Media">
     <meta name="keywords" content="portfolio, clean, minimal, blog, media, portfolio website">
     <meta name="author" content="Nunya Marketing">
@@ -44,6 +44,19 @@
     <!-- END: Styles -->
     <!-- jQuery -->
     <script src="assets/bower_components/jquery/dist/jquery.min.js"></script>
+    <style>
+        .nk-carousel-3 .flickity-slider>div
+        {
+            height: 570px;
+            width: 100%;
+        }
+
+        .nk-carousel-3 .flickity-slider>div>div
+        {
+            background-size: cover;
+            background-position: 50% 50%;
+        }
+    </style>
 </head>
 
 <body>
@@ -194,148 +207,152 @@ Additional Classes:
 -->
         <div class="nk-header-title nk-header-title-md nk-header-title-parallax nk-header-title-parallax-opacity">
             <div class="bg-image">
-                <div style="background-image: url('assets/images/header-services.jpg');"></div>
+                <div style="background-image: url('assets/images/video.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.265);"></div>
             </div>
             <div class="nk-header-table">
                 <div class="nk-header-table-cell">
                     <div class="container">
-                        <h1 class="nk-title text-white">Our Services</h1>
-                        <div class="nk-gap"></div>
-                        <div class="nk-header-text text-white">
-                            <div class="lead-sm">We have over 20 years of combined experience, and know a thing or two
-                                <br> about designing websites and mobile apps.
-                            </div>
-                        </div>
+                        <h1 class="nk-title text-white">Capturing</h1>
+                        <h1 class="nk-title text-danger">What Matters</h1>
                     </div>
                 </div>
             </div>
         </div>
         <!-- END: Header Title -->
-        <!-- START: Features -->
-        <div class="nk-box bg-white">
-            <div class="nk-gap-5 mnt-6"></div>
-            <div class="container">
-                <div class="row vertical-gap md-gap">
-
-                    
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="3d.html">
+            <!-- START: Features -->
+            <div class="nk-box bg-main text-white">
+                <div class="container">
+                    <div class="nk-gap-5 mnt-6"></div>
+                    <div class="row vertical-gap">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="nk-ibox-3">
                                 <div class="nk-ibox-icon">
-                                    <span class="pe-7s-tools"></span>
+                                    <span class="pe-7s-micro"></span>
                                 </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">3D Visulization</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">3D Visualization & Animation Team specialized in Engineering Industry.
-                                    Our focus is to provide bespoke, realistic and the best quality visuals.</p>
+                                <div class="nk-ibox-cont">
+                                    <div class="nk-ibox-title">Audio</div>
+                                    <br>
+                                    <div class="nk-ibox-text small">From podcasts to high fidelity audio for adverts and social media.</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
-
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="design.html">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="nk-ibox-3">
                                 <div class="nk-ibox-icon">
-                                    <span class="pe-7s-crop"></span>
+                                    <span class="pe-7s-mouse"></span>
                                 </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Graphic Design</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">Our experience & skillset enable me to work with you right from concept
-                                    creation & strategy through to execution, whether it be full brand identity, logo
-                                    design, print, web design, or packaging design.</p>
+                                <div class="nk-ibox-cont">
+                                    <div class="nk-ibox-title">Animation</div>
+                                    <br>
+                                    <div class="nk-ibox-text small">Every successful video starts with a great idea. Our creative minds will take your brief and brand and develop your unique video concept, designed to connect with your audience and deliver results.</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="photo.html">
-                                <div class="nk-ibox-icon">
-                                    <span class="pe-7s-camera"></span>
-                                </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Photography</div>
-                            </div>
-                            <br>
-                            <div>
-                                <p class="small">We cover corporate portraits and business headshots, business branding
-                                    photography for startups and SMEs, product photography, and events including
-                                    conferences, awards dinners, and shows, exhibitions, PR events, and launches.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="nk-ibox-3">
-                            <a href="video.html">
+                        <div class="col-md-6 col-lg-3">
+                            <div class="nk-ibox-3">
                                 <div class="nk-ibox-icon">
                                     <span class="pe-7s-video"></span>
                                 </div>
-                            </a>
-                            <div class="nk-ibox-cont">
-                                <div class="nk-ibox-title">Videography & Audiography</div>
+                                <div class="nk-ibox-cont">
+                                    <div class="nk-ibox-title">Live Action</div>
+                                    <br>
+                                    <div class="nk-ibox-text small">Showstopping adverts to boost engagement, we use trusted strategies to create a memorable video.</div>
+                                </div>
                             </div>
-                            <br>
+                        </div>
+                        <div class="col-md-6 col-lg-3">
+                            <div class="nk-ibox-3">
+                                <div class="nk-ibox-icon">
+                                    <span class="pe-7s-monitor"></span>
+                                </div>
+                                <div class="nk-ibox-cont">
+                                    <div class="nk-ibox-title">Motion Graphics</div>
+                                    <br>
+                                    <div class="nk-ibox-text small">We help with that by ensuring all our animations are design-led. This means all our work is considered, and created from original illustrations and material so that your brand looks contemporary and feels authentic.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-gap-5 mnt-6"></div>
+            </div>
+            <!-- END: Features -->
+        <!-- START: Portfolio -->
+        <div class="container-fluid">
+            <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols nk-popup-gallery">
+                <div class="nk-isotope-item" data-filter="Photography">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="https://www.youtube.com/watch?v=-Hb-gpu1CwM" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/videopage/3.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
                             <div>
-                                <p class="small">With a full in-house team of professional photographers and
-                                    videographers, directed by experienced creatives, each project is managed by a
-                                    dedicated account manager who will ensure the project is on-brief and delivered
-                                    on-time.</p>
+                                <div class="portfolio-item-icon"><span class="pe-7s-play"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="https://www.youtube.com/watch?v=-Hb-gpu1CwM" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/videopage/4.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-play"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="https://www.youtube.com/watch?v=-Hb-gpu1CwM" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/videopage/2.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-play"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Print">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="https://www.youtube.com/watch?v=-Hb-gpu1CwM" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/videopage/1.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-play"></span></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="nk-gap-5 mnt-6"></div>
         </div>
-        <!-- END: Features -->
+        <!-- END: Portfolio -->
         <!-- START: Reviews -->
         <div class="nk-box bg-main">
             <div class="nk-gap-5 mnt-6"></div>
             <div class="nk-gap-3"></div>
             <div class="container-fluid">
                 <!-- START: Carousel -->
-                <div class="nk-carousel nk-carousel-all-visible text-white" data-autoplay="18000" data-dots="true">
+                <div class="nk-carousel nk-carousel-all-visible text-white text-center">
                     <div class="nk-carousel-inner">
                         <div>
                             <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
-                                <div class="nk-gap-2"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
-                                <div class="nk-gap-2"></div>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <blockquote class="nk-blockquote-style-1 text-white">
-                                    <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
-                                        them on a sizable first project and am looking forward to start the next one
-                                        asap.</p>
-                                    <cite>Michael Hopkins</cite>
-                                </blockquote>
+                                <p>Outstanding job and exceeded all expectations. It was a pleasure to work with
+                                    them on a sizable first project and am looking forward to start the next one
+                                    asap.</p>
                                 <div class="nk-gap-2"></div>
                             </div>
                         </div>
