--- a/about.html
+++ b/about.html
@@ -373,7 +373,7 @@
                         <p>Let us know what you're looking for in an agency. We'll take a look and see if this could be
                             the start of something beautiful.</p>
                         <div class="nk-gap mnt-9"></div>
-                        <a href="page-contact-us.html" class="nk-btn nk-btn-long">Let's Talk</a>
+                        <a href="contact.html" class="nk-btn nk-btn-long">Let's Talk</a>
                     </div>
                 </div>
             </div>
