--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
                             <a href="#"> Services </a>
                             <ul class="dropdown">
                                 <li class=" nk-drop-item">
-                                    <a href="3d.html"> 3D VISULIZATION </a>
-                                </li>
-                                <li class=" nk-drop-item">
                                     <a href="design.html"> GRAPHIC DESIGN
                                     </a>
                                 </li>
@@ -217,56 +214,42 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-1-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/1.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-2-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/2.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-3-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/3.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-4-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/4.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-5-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-6-dark.png" alt="" class="nk-img-fit">
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-7-dark.png" alt="" class="nk-img-fit">
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <div class="nk-box-1">
-                                <img src="assets/images/partner-logo-8-dark.png" alt="" class="nk-img-fit">
+                                <img src="assets/images/Partner Logos/W.SHADOW/6.png" alt="" class="nk-img-fit">
                             </div>
                         </div>
                     </div>
@@ -277,20 +260,18 @@ Additional Classes:
         <div class="container-fluid">
             <!-- START: Filter -->
             <ul class="nk-isotope-filter">
-                <li class="active" data-filter="*">All</li>
-                <li data-filter="Branding">Branding</li>
-                <li data-filter="Print">Print</li>
-                <li data-filter="Photography">Photography</li>
-                <li data-filter="Design">Design</li>
+                <li data-filter="Branding">Graphic Design</li>
+                <li class="active" data-filter="Photography">Photography</li>
+                <li data-filter="Design">Videography</li>
             </ul>
             <!-- END: Filter -->
             <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols nk-popup-gallery">
-                <div class="nk-isotope-item" data-filter="Photography">
+                <div class="nk-isotope-item" data-filter="Branding">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="assets/images/portfolio-1.jpg" class="nk-portfolio-item-link nk-gallery-item"
                             data-size="1500x1500"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-1-sm.jpg');"></div>
+                            <div style="background-image: url('assets/images/graphicdesign/1.png');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
                             <div>
@@ -299,12 +280,59 @@ Additional Classes:
                         </div>
                     </div>
                 </div>
-                <div class="nk-isotope-item" data-filter="Design">
+
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-1.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/graphicdesign/2.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-1.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/graphicdesign/3.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="nk-isotope-item" data-filter="Branding">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-1.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/graphicdesign/4.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="nk-isotope-item" data-filter="Photography">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="assets/images/portfolio-2.jpg" class="nk-portfolio-item-link nk-gallery-item"
                             data-size="1500x1500"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-2-sm.jpg');"></div>
+                            <div style="background-image: url('assets/images/photography/1.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
                             <div>
@@ -313,7 +341,50 @@ Additional Classes:
                         </div>
                     </div>
                 </div>
-                <div class="nk-isotope-item" data-filter="Branding">
+                <div class="nk-isotope-item" data-filter="Photography">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-2.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/photography/2.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Photography">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-2.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/photography/3.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Photography">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-2.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/photography/4.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="assets/images/portfolio-3.jpg" class="nk-portfolio-item-link nk-gallery-item"
                             data-size="1500x1500"></a>
@@ -327,12 +398,40 @@ Additional Classes:
                         </div>
                     </div>
                 </div>
-                <div class="nk-isotope-item" data-filter="Print">
+                <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="assets/images/portfolio-4.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                        <a href="assets/images/portfolio-3.jpg" class="nk-portfolio-item-link nk-gallery-item"
                             data-size="1500x1500"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-4-sm.jpg');"></div>
+                            <div style="background-image: url('assets/images/portfolio-3-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-3.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-3-sm.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
+                            <div>
+                                <div class="portfolio-item-icon"><span class="pe-7s-look"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="assets/images/portfolio-3.jpg" class="nk-portfolio-item-link nk-gallery-item"
+                            data-size="1500x1500"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/images/portfolio-3-sm.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-center bg-main-9">
                             <div>
@@ -356,7 +455,7 @@ Additional Classes:
                         <p>Let us know what you're looking for in an agency. We'll take a look and see if this could be
                             the start of something beautiful.</p>
                         <div class="nk-gap mnt-9"></div>
-                        <a href="page-contact-us.html" class="nk-btn nk-btn-long">Let's Talk</a>
+                        <a href="contact.html" class="nk-btn nk-btn-long">Let's Talk</a>
                     </div>
                 </div>
             </div>
