--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <a href="http://www.nunyagroup.com" target="_blank" rel="noopener noreferrer">
+                                <a href="http://www.nunyagroup.co.uk" target="_blank" rel="noopener noreferrer">
                                     <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="nunyagroup.com" class="nk-img-fit">
                                 </a>
                             </div>
