--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ Additional Classes:
                         <div class="nk-gap-2"></div>
                         <div class="nk-box-3 text-center">
                             <h2>Who we are</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, dolorem! Impedit architecto deserunt, quaerat asperiores aspernatur alias excepturi iure qui aperiam quasi nulla officia eligendi deleniti sit, veniam consequatur iusto modi eveniet ipsam laboriosam? Facere repellat iste optio pariatur blanditiis a, quam voluptate voluptatibus, doloribus, officiis possimus odit consequuntur incidunt molestiae enim commodi! Soluta deserunt, officiis natus quaerat veritatis architecto?</p>
                             <div class="nk-gap mnt-5"></div>
                             <p></p>
                             <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit">
@@ -270,8 +271,9 @@ Additional Classes:
         <div class="container-fluid">
             <!-- START: Filter -->
             <ul class="nk-isotope-filter">
+                <li class="active" data-filter="*">All</li>
                 <li data-filter="Branding">Graphic Design</li>
-                <li class="active" data-filter="Photography">Photography</li>
+                <li data-filter="Photography">Photography</li>
                 <li data-filter="Design">Videography</li>
             </ul>
             <!-- END: Filter -->
