--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <a href="http://www.theinterbellum.com" target="_blank" rel="noopener noreferrer">
+                                <a href="https://www.theinterbellum.uk/" target="_blank" rel="noopener noreferrer">
                                     <img src="assets/images/Partner Logos/W.SHADOW/2.png" alt="theinterbellum" class="nk-img-fit">
                                 </a>
                             </div>
